--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -121,7 +121,6 @@
         .logo {
             width: 80px;
             height: 80px;
-            object-fit: contain;
             filter: brightness(0) invert(1);
         }
 
@@ -502,7 +501,12 @@
         <!-- Header -->
         <header class="header">
             <div class="logo-container">
-                <img src="logo_transparent_72.png" alt="My Money Logo" class="logo">
+                <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                    <circle cx="50" cy="50" r="45" fill="#018159"/>
+                    <path d="M50 25 L65 45 L75 40 L60 60 L75 75 L50 65 L25 75 L40 60 L25 40 L35 45 Z" fill="#F2B835"/>
+                    <circle cx="50" cy="50" r="20" fill="none" stroke="#FFFFFF" stroke-width="3"/>
+                    <text x="50" y="90" text-anchor="middle" fill="#FFFFFF" font-size="12" font-weight="bold">$</text>
+                </svg>
             </div>
             
             <h1 class="app-title">My Money</h1>
